--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Venez explorer notre boutique d'accessoires homme et femme ">
+    <meta name="google-site-verification" content="0xnMv8Ll3qciw_T7kLDdwHDnyM0qkjqL6xQrZCq6Jys" />
     <title>Ivoire Accessory</title>
   </head>
   <body>
